--- a/24A_CG2_DirectX_LC2C.vcxproj.filters
+++ b/24A_CG2_DirectX_LC2C.vcxproj.filters
@@ -84,4 +84,7 @@
       <Filter>ImGui</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Object3d.hlsli" />
+  </ItemGroup>
 </Project>
